--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
-.App {
-  text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-weight: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    font-family: 'monospace', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app {
+    background-image: url('Images/image7.png');
+    mix-blend-mode: hard-light;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    image-rendering: -webkit-optimize-contrast;
+    width: 100%;
+    height: 1200px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/*          search            */
+.containerSearch {
+    text-align: center;
+    width: 500px;
+    height: auto;
+    margin: 0 auto;
+    border-radius: 10px;
+    padding-top: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+    margin-top: 30px;
+    color: white;
+    font-size: 64px;
+    font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+    margin-top: 50px;
+    text-align: center;
+    color: white;
+    font-size: 24px;
+    line-height: 50px;
+}
+
+input {
+    width: 100%;
+    margin-top: 50px;
+    -webkit-appearance: none;
+    font-size: x-large;
+    color: white;
+    border: none;
+    background: none;
+    padding-bottom: 10px;
+    border-bottom: 3px solid white;
+    outline: none;
+    position: relative;
+    display: block;
+    padding-left: 70px;
+}
+
+input:focus {
+    color: white;
+}
+
+.line  {
+    transition: .5s width ease-in-out, .5s background ease-in-out;
+    width: 0px;
+    height: 5px;
+    position: absolute;
+    background: white;
+    margin-top: -2px;
+}
+
+input:focus + .line {
+    margin-top: -2px;
+    width: 100%;
+    background: #FFE301;
+}
+
+button {
+    display: block;
+    text-align: center;
+    margin: 30px auto;
+    padding: 10px;
+    width: 100%;
+    border-radius: 10px;
+    cursor: pointer;
+    background: #FFE301;
+    color: #3F5A9F;
+    font-weight: bold;
+}
+
+.form {
+    position: relative;
+}
+
+
+
+
+
+/*          display           */
+.containerDisplay {
+    width: 20%;
+    height: 400px;
+    background-image: linear-gradient(white, #2959A4);
+    border-radius: 10px;
+    margin: 0 auto;
+}
+
+.titleDisplay {
+    color: #3F5A9F;
+    text-align: center;
+    font-weight: bold;
+    padding-top: 30px;
+}
+
+.textDisplay {
+    color: #3F5A9F;
+    text-align: center;
+}
+
+.iconDisplay {
+    text-align: center;
+}
+
+.type {
+    margin-top: 30px;
+    font-weight: bold;
+}
+
+.temperatureDisplay {
+    font-size: 48px;
+    font-weight: bold;
 }
